[package]
name = "dtbrowse"
version = "0.1.0"
authors = ["Windel Bouwman <windel.bouwman@demcon.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# device_tree = "1.1.0"
dtb = "0.2.0"

clap = "2.33"
log = "0.4.8"
simple_logger = "1.6"
scroll = "0.10"
glib = "0.9"
gio = "0.8"
gtk = "0.8"
gdk = "0.12"
